--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^14.14.6",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "ts-dotenv": "^0.8.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
