--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "src/app.ts",
   "scripts": {
     "start": "ts-node src/app.ts",
-    "dev": "nodemon --exec ts-node src/app.ts"
+    "dev": "nodemon --exec ts-node src/app.ts",
+    "generate-prisma-client": "prisma generate",
+    "makemigrations": "prisma migrate save --experimental",
+    "migrate": "prisma migrate up --experimental"
   },
   "repository": {
     "type": "git",
@@ -22,6 +25,7 @@
   },
   "homepage": "https://github.com/product-ride/osspuppy-api#readme",
   "dependencies": {
+    "@prisma/client": "^2.10.1",
     "@types/express": "^4.17.8",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.6",
@@ -32,6 +36,7 @@
     "typescript": "^4.0.5"
   },
   "devDependencies": {
+    "@prisma/cli": "^2.10.1",
     "nodemon": "^2.0.6"
   }
 }
