feat: start gh auth

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 PORT=8000
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+GH_CLIENT_ID=<GitHub OAuth Client ID>
+GH_CLIENT_SECRET=<GitHub OAuth Client Secret>
+GH_REDIRECT_URI=<GitHub OAuth Redirect URI>
