--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
   },
   "homepage": "https://github.com/product-ride/osspuppy-api#readme",
   "dependencies": {
+    "@octokit/rest": "^18.0.9",
     "@prisma/client": "^2.10.1",
     "@types/express": "^4.17.8",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.6",
+    "@types/node-fetch": "^2.5.7",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
     "ts-dotenv": "^0.8.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
