--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=pub
 GH_CLIENT_ID=<GitHub OAuth Client ID>
 GH_CLIENT_SECRET=<GitHub OAuth Client Secret>
 GH_REDIRECT_URI=<GitHub OAuth Redirect URI>
+FRONTEND_URI=http://localhost:3000/auth/github
