--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.6",
     "@types/node-fetch": "^2.5.7",
+    "@types/uuid": "^8.3.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "ts-dotenv": "^0.8.1",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@prisma/cli": "^2.10.1",
