--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ GH_CLIENT_ID=<GitHub OAuth Client ID>
 GH_CLIENT_SECRET=<GitHub OAuth Client Secret>
 GH_REDIRECT_URI=<GitHub OAuth Redirect URI>
 FRONTEND_URI=http://localhost:3000/auth/github
+JWT_SECRET=secret
