--- a/package.json
+++ b/package.json
@@ -31,10 +31,15 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.6",
     "@types/node-fetch": "^2.5.7",
+    "@types/passport": "^1.0.4",
+    "@types/passport-jwt": "^3.0.3",
     "@types/uuid": "^8.3.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "ts-dotenv": "^0.8.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5",
