--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.ts",
   "scripts": {
     "start": "ts-node src/app.ts",
-    "dev": "nodemon --exec ts-node src/app.ts",
+    "dev": "NODE_ENV=development nodemon --exec ts-node src/app.ts",
     "generate-prisma-client": "prisma generate",
     "makemigrations": "prisma migrate save --experimental",
     "migrate": "prisma migrate up --experimental"
