--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "NODE_ENV=development nodemon --exec ts-node src/app.ts",
     "generate-prisma-client": "prisma generate",
     "makemigrations": "prisma migrate save --experimental",
-    "migrate": "prisma migrate up --experimental"
+    "migrate": "prisma migrate up --experimental",
+    "worker-dev": "NODE_ENV=development nodemon --exec ts-node src/worker.ts",
+    "worker": "ts-node src/worker.ts"
   },
   "repository": {
     "type": "git",
@@ -34,6 +36,7 @@
     "@types/passport": "^1.0.4",
     "@types/passport-jwt": "^3.0.3",
     "@types/uuid": "^8.3.0",
+    "bee-queue": "^1.3.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
