--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "ts-node src/app.ts",
     "dev": "NODE_ENV=development nodemon --exec ts-node src/app.ts",
+    "build": "prisma migrate up --experimental",
     "generate-prisma-client": "prisma generate",
     "makemigrations": "prisma migrate save --experimental",
     "migrate": "prisma migrate up --experimental",
