feat: add CORS protection

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ GH_CLIENT_SECRET=<GitHub OAuth Client Secret>
 GH_REDIRECT_URI=<GitHub OAuth Redirect URI>
 FRONTEND_URI=http://localhost:3000/auth/github
 JWT_SECRET=secret
+CORS_ORIGINS=http://localhost:3000
