--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@octokit/rest": "^18.0.9",
     "@prisma/client": "^2.10.1",
+    "@types/cors": "^2.8.9",
     "@types/cron": "^1.7.2",
     "@types/express": "^4.17.8",
     "@types/morgan": "^1.9.2",
@@ -39,6 +40,7 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/uuid": "^8.3.0",
     "bee-queue": "^1.3.1",
+    "cors": "^2.8.5",
     "cron": "^1.8.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
